# Copyright (c) 2016 The WebRTC project authors. All Rights Reserved.
#
# Use of this source code is governed by a BSD-style license
# that can be found in the LICENSE file in the root of the source
# tree. An additional intellectual property rights grant can be found
# in the file PATENTS.  All contributing project authors may
# be found in the AUTHORS file in the root of the source tree.

python_google = [
  "../../chromium/src/tools/python/google/__init__.py",
  "../../chromium/src/tools/python/google/gethash_timer.py",
  "../../chromium/src/tools/python/google/httpd_config/httpd.conf",
  "../../chromium/src/tools/python/google/httpd_config/httpd2.conf",
  "../../chromium/src/tools/python/google/httpd_config/httpd2.pem",
  "../../chromium/src/tools/python/google/httpd_config/httpd2_linux.conf",
  "../../chromium/src/tools/python/google/httpd_config/httpd2_mac.conf",
  "../../chromium/src/tools/python/google/httpd_config/mime.types",
  "../../chromium/src/tools/python/google/httpd_config/root_ca_cert.pem",
  "../../chromium/src/tools/python/google/httpd_utils.py",
  "../../chromium/src/tools/python/google/logging_utils.py",
  "../../chromium/src/tools/python/google/path_utils.py",
  "../../chromium/src/tools/python/google/platform_utils.py",
  "../../chromium/src/tools/python/google/platform_utils_linux.py",
  "../../chromium/src/tools/python/google/platform_utils_mac.py",
  "../../chromium/src/tools/python/google/platform_utils_win.py",
  "../../chromium/src/tools/python/google/process_utils.py",
]
